callout collapse fix

--- a/_ltu-components/src/callout/scss/_callout.scss
+++ b/_ltu-components/src/callout/scss/_callout.scss
@@ -55,6 +55,10 @@
         }
     }
 
+    .ds-callout__collapse-wrapper {
+        width: 100%;
+    }
+
     .ds-collapse__content {
         flex-grow: 0;
         flex-shrink: 0;
